unifi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-ui
spec:
  selector:
    app: unifi
  ports:
  - port: 8443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-ports
spec:
  selector:
    app: unifi
  ports:
    - port: 8443
      targetPort: 8443
      name: tls
      protocol: TCP
    - port: 3478
      targetPort: 3478
      protocol: UDP
      name: stun
    - port: 10001
      targetPort: 10001
      protocol: UDP
      name: ap-discovery
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: inform
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: l2-discover
    - port: 8843
      targetPort: 8843
      protocol: TCP
      name: guest-tls
    - port: 8880
      targetPort: 8880
      protocol: TCP
      name: guest
    - port: 6789
      targetPort: 6789
      protocol: TCP
      name: mobile-test
    - port: 5514
      targetPort: 5514
      protocol: UDP
      name: rsyslog
