unifi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ing
spec:
  rules:
  - host: unifi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: unifi-ui
            port: 
              number: 8443
